--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,12 +1,15 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/userConsole/userConsole",
-    "pages/storageConsole/storageConsole",
-    "pages/databaseGuide/databaseGuide",
-    "pages/addFunction/addFunction",
-    "pages/deployFunctions/deployFunctions",
-    "pages/chooseLib/chooseLib"
+    
+    
+    
+    
+    
+    
+    
+    "pages/Card/Card",
+    
+    "pages/addCard/addCard"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
